--- a/app/src/main/res/layout/activity_data_binding.xml
+++ b/app/src/main/res/layout/activity_data_binding.xml
@@ -79,6 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
             app:layout_constraintEnd_toEndOf="parent"
+            android:text="@={viewModels.uppercase}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_login_data_binding" />
 
