--- a/app/src/main/res/layout/activity_uielement.xml
+++ b/app/src/main/res/layout/activity_uielement.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".UiElementActivity">
 
     <androidx.appcompat.widget.AppCompatEditText
@@ -144,3 +147,4 @@
         app:layout_constraintTop_toBottomOf="@id/chcx_basketball" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
