--- a/app/src/main/res/layout/activity_constraint_layout.xml
+++ b/app/src/main/res/layout/activity_constraint_layout.xml
@@ -123,6 +123,7 @@
         android:layout_height="wrap_content"
         android:background="#bfbfbf"
         android:padding="5dp"
+        android:layout_marginTop="20dp"
         android:text="@string/chain_button_1"
         android:textAllCaps="false"
         android:textColor="@color/black"
@@ -143,6 +144,7 @@
         android:text="@string/chain_button_2"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        android:layout_marginTop="20dp"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_chain_three"
@@ -159,6 +161,7 @@
         android:text="@string/chain_button__3"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        android:layout_marginTop="20dp"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
