--- a/app/src/main/res/layout/activity_mvcactivity.xml
+++ b/app/src/main/res/layout/activity_mvcactivity.xml
@@ -36,7 +36,7 @@
         android:layout_margin="20dp"
         android:background="@color/black"
         android:inputType="textPassword"
-        android:text="@string/btn_txt_mvc_login"
+        android:text="Login"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
