--- a/app/src/main/res/layout/item_recyclerview_expandable.xml
+++ b/app/src/main/res/layout/item_recyclerview_expandable.xml
@@ -32,6 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="visible"
+            android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_name"
             tools:ignore="ExtraText">
@@ -59,7 +60,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txt_date" />
+                app:layout_constraintTop_toBottomOf="@id/description" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/description"
@@ -70,8 +71,8 @@
                 android:text="@string/description_text"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/txt_date"
+                app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
