--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -24,6 +24,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="25dp"
         android:hint="@string/hint_name"
+        android:singleLine="true"
+        android:imeOptions="actionNext"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtview_createuser_enterdetails" />
@@ -34,6 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="25dp"
         android:hint="@string/hint_job"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editxt_createuser_name" />
