--- a/app/src/main/res/layout/activity_mvpactivity.xml
+++ b/app/src/main/res/layout/activity_mvpactivity.xml
@@ -14,6 +14,10 @@
         android:hint="Enter Email"
         android:textColor="@color/black"
         android:textSize="30sp"
+        android:singleLine="true"
+        android:imeOptions="actionNext"
+        android:inputType="textEmailAddress"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +31,9 @@
         android:hint="Enter name"
         android:textColor="@color/black"
         android:textSize="30sp"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txt_email_mvp" />
