--- a/app/src/main/res/layout/activity_relative_layout.xml
+++ b/app/src/main/res/layout/activity_relative_layout.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -38,7 +39,10 @@
             android:layout_toStartOf="@id/spaces"
             android:background="@drawable/editxt_border"
             android:hint="@string/hint_your_name"
+            android:imeOptions="actionNext"
+            android:maxLines="1"
             android:padding="20dp"
+            android:singleLine="true"
             android:textColor="@color/white"
             android:textColorHint="@color/hinttextform"
             android:textSize="15sp"
@@ -56,8 +60,11 @@
             android:layout_toEndOf="@id/editxt_name_relative"
             android:background="@drawable/editxt_border"
             android:hint="@string/hint_your_email"
+            android:imeOptions="actionNext"
             android:inputType="textEmailAddress"
+            android:maxLines="1"
             android:padding="20dp"
+            android:singleLine="true"
             android:textColor="@color/white"
             android:textColorHint="@color/hinttextform"
             android:textSize="15sp"
